# thisenum

./: .gitignore  CHANGES.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: enum_const.rs
impl/: Cargo.toml  README.md
impl/src/: lib.rs  prelude.rs
src/: lib.rs  main.rs
tests/: todo.rs
