[package]
name = "thisenum"
version = "0.1.1"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "Assign constant literals to enum arms."
repository = "https://github.com/arpadav/thisenum"
documentation = "https://docs.rs/thisenum"
readme = "README.md"
keywords = ["enum", "const", "literals", "macro", "parsing"]
categories = ["parsing", "memory-management"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
thiserror = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1