[package]
name = "thisenum"
version = "0.2.1"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "Assign constant literals to enum arms."
repository = "https://github.com/arpadav/thisenum"
documentation = "https://docs.rs/thisenum"
readme = "README.md"
keywords = ["enum", "const", "literals", "macro", "parsing"]
categories = ["parsing", "memory-management"]
edition = "2021"

[features]
eq = []
full = [ "eq" ]

[dependencies]
thiserror = "1.0"
thisenum-impl = { version = "0.2", path = "impl" }

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1